--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -49,7 +49,13 @@ const { meta } = Astro.props;
   {meta.lang ? <div class="inline-chip">{meta.lang}</div> : null}
   {
     meta.taxonomy.keywords.map(keyword => (
-      <div class="inline-chip">#{keyword}</div>
+      <a href={
+        keyword === "academia"
+          ? new URL(`${import.meta.env.BASE_URL}academia`, Astro.site)
+          : new URL(`${import.meta.env.BASE_URL}search?q=%23${keyword}`, Astro.site)
+      }>
+        <div class="inline-chip @hover-text-one transition-lively">#{keyword}</div>
+      </a>
     ))
   }
 </div>
