feat: revamp index page

--- a/src/components/CardTravelling.astro
+++ b/src/components/CardTravelling.astro
@@ -11,7 +11,7 @@
       class="text-one-front @hover-text-one transition-lively"
       title="Project Travelling" href="https://www.travellings.cn/go.html" rel="noopener" target="_blank"
     >
-      <div class="i-custom-travelling"></div>
+      <div class="i-mdi-train-variant"></div>
     </a>
   </div>
 </article>
