--- a/src/components/TheFooter.astro
+++ b/src/components/TheFooter.astro
@@ -14,6 +14,19 @@ const { noComments } = Astro.props;
 <footer id="the-footer">
   <nav id="the-footer-start" class="gap-2">
     <BaseHover>
+      <button slot="handle" title="Am">
+        <a
+          href="https://am.yixuan-wang.site"
+          rel="noopener"
+          target="_blank"
+          title="Am"
+        >
+          <div class="i-mdi-information" />
+        </a>
+      </button>
+      <div slot="content" class="tip">Am</div>
+    </BaseHover>
+    <BaseHover>
       <button slot="handle" title="GitHub">
         <a
           href="https://github.com/Yixuan-Wang"
