--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -28,12 +28,12 @@ const headerItems: HeaderItem[] = [
     icon: "i-mdi-account-box",
     url: "friends",
   },
-  {
-    title: "Travelling",
-    icon: "i-custom-travelling",
-    url: "https://www.travellings.cn/go.html",
-    absolute: true,
-  },
+  //{
+  //  title: "Travelling",
+  //  icon: "i-custom-travelling",
+  //  url: "https://www.travellings.cn/go.html",
+  //  absolute: true,
+  //},
   {
     title: "Lab",
     icon: "i-mdi-developer-board",
