feat: use oklch by default

--- a/src/components/TheSearch.astro
+++ b/src/components/TheSearch.astro
@@ -49,11 +49,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <style is:global>
   .pagefind-ui {
-    --pagefind-ui-primary: rgb(var(--color-one));
+    --pagefind-ui-primary: var(--color-one);
     --pagefind-ui-text: rgb(var(--color-front));
     --pagefind-ui-background: transparent;
-    --pagefind-ui-border: rgb(var(--color-one-front));
-    --pagefind-ui-tag: rgb(var(--color-one-front));
+    --pagefind-ui-border: var(--color-one-front);
+    --pagefind-ui-tag: var(--color-one-front);
     --pagefind-ui-font: var(--font-sans);
   }
 
