--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -45,16 +45,10 @@ const {
         <script is:inline type="module">
           import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
           document.addEventListener("DOMContentLoaded", function() {
-            const style = getComputedStyle(document.body);
             mermaid.initialize({
               securityLevel: 'loose',
-              theme: 'base',
+              theme: 'neutral',
               fontFamily: 'inherit',
-              themeVariables: {
-                darkMode: document.documentElement.classList.contains("dark"),
-                primaryColor: `rgb(${style.getPropertyValue("--color-one-back")})`,
-                lineColor: `rgb(${style.getPropertyValue("--color-front")})`,
-              }
             });
           }); 
         </script>
