--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,9 +74,9 @@ body.cloak {
 }
 
 :root {
-  --font-sans: var(--font-custom-sans, "Inter"), var(--font-custom-sans-cjk, "Noto Sans SC"), sans-serif;
-  --font-serif: var(--font-custom-serif, "Source Serif 4"), var(--font-custom-serif-cjk, "Noto Serif SC"), serif;
-  --font-mono: var(--font-custom-mono, "JetBrains Mono"), var(--font-custom-mono-cjk, "Noto Sans SC"), monospace;
+  --font-sans: var(--font-custom-sans, "Inter"), var(--font-custom-sans-cjk, "Noto Sans SC"), "Noto Color Emoji", sans-serif;
+  --font-serif: var(--font-custom-serif, "Source Serif 4"), var(--font-custom-serif-cjk, "Noto Serif SC"), "Noto Color Emoji", serif;
+  --font-mono: var(--font-custom-mono, "JetBrains Mono"), var(--font-custom-mono-cjk, "Noto Sans SC"), "Noto Color Emoji", monospace;
 }
 
 :root:not(.dark) {
