fix: fix color player

--- a/src/pages/lab/typesetting.astro
+++ b/src/pages/lab/typesetting.astro
@@ -7,6 +7,7 @@ import ColorPalettePlayer from "src/components/ColorPalettePlayer.svelte";
 
 import "src/styles/post.css";
 import Callout from "~/components/runtime/Callout.astro";
+import ColorPalette from "~/components/ColorPalette.astro";
 
 const CODE_BLOCK = `<pre class="shiki css-variables" style="background-color:var(--shiki-background);color:var(--shiki-foreground)"
   tabindex="0"><code class="language-cpp"><span class="line"><span style="color:var(--shiki-token-keyword)">#include</span><span style="color:var(--shiki-token-string-expression)"> &lt;iostream&gt;</span></span>
@@ -48,16 +49,18 @@ const CODE_BLOCK = `<pre class="shiki css-variables" style="background-color:var
       <h2>
         <span class="text-2xl font-bold text-one-front">Color Palette</span>
         <div class="ml-2 inline-flex text-sm gap-1">
-          <div class="i-mdi-circle text-one-front"></div>
-          <div class="i-mdi-circle text-one"></div>
-          <div class="i-mdi-circle text-one-back"></div>
+          <div class="text-one-front i-mdi-circle"></div>
+          <div class="text-one i-mdi-circle"></div>
+          <div class="text-one-back i-mdi-circle"></div>
         
-          <div class="i-mdi-circle text-two-front"></div>
-          <div class="i-mdi-circle text-two"></div>
-          <div class="i-mdi-circle text-two-back"></div>
+          <div class="text-two-front i-mdi-circle"></div>
+          <div class="text-two i-mdi-circle"></div>
+          <div class="text-two-back i-mdi-circle"></div>
         </div>
       </h2>
 
+      <ColorPalette />
+      <hr />
       <ColorPalettePlayer client:only="svelte" />
     </section>
   </main>
