--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
-import "src/styles/main.css";
 import "src/styles/font.css";
+import "src/styles/font-cjk.css";
+import "src/styles/main.css";
 ---
 
 <!DOCTYPE html>
@@ -11,7 +12,6 @@ import "src/styles/font.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta property="og:type" content="website" />
-
 
     <!-- Color palette and typesetting -->
     <style is:inline id="style-color-palette"></style>
