--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-opsz-normal.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-latin-opsz-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -14,7 +14,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-ext-opsz-normal.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-latin-ext-opsz-normal.woff2) format('woff2-variations');
   unicode-range: U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -24,7 +24,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/latin-opsz-normal.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-latin-opsz-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -34,26 +34,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/latin-ext-opsz-normal.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-latin-ext-opsz-normal.woff2) format('woff2-variations');
   unicode-range: U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
-}
-
-/* noto-sans-sc-chinese-simplified-wght-normal */
-@font-face {
-  font-family: 'Noto Sans SC';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-sans-sc:vf@latest/chinese-simplified-wght-normal.woff2) format('woff2-variations');
-}
-
-/* noto-serif-sc-chinese-simplified-wght-normal */
-@font-face {
-  font-family: 'Noto Serif SC';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-serif-sc:vf@latest/chinese-simplified-wght-normal.woff2) format('woff2-variations');
 }
 
 /* jetbrains-mono-latin-wght-normal */
@@ -62,7 +44,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100 800;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/jetbrains-mono:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
+  src: local('JetBrains Mono'), url(@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -72,26 +54,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100 800;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/jetbrains-mono:vf@latest/latin-ext-wght-normal.woff2) format('woff2-variations');
+  src: local('JetBrains Mono'), url(@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-ext-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
-}
-
-/* lxgw-wenkai-latin-400-normal */
-@font-face {
-  font-family: 'LXGW WenKai';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 500;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/lxgw-wenkai@latest/latin-500-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/lxgw-wenkai@latest/latin-500-normal.woff) format('woff');
-}
-
-/* lxgw-wenkai-latin-700-normal */
-@font-face {
-  font-family: 'LXGW WenKai';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 700;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/lxgw-wenkai@latest/latin-700-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/lxgw-wenkai@latest/latin-700-normal.woff) format('woff');
 }
 
 /* noto-color-emoji-emoji-400-normal */
@@ -100,7 +64,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-color-emoji@latest/emoji-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/noto-color-emoji@latest/emoji-400-normal.woff) format('woff');
+  src: local('Noto Color Emoji'), url(@fontsource/noto-color-emoji/files/noto-color-emoji-emoji-400-normal.woff2) format('woff2'), url(@fontsource/noto-color-emoji/files/noto-color-emoji-emoji-400-normal.woff) format('woff');;
 }
 
 /* Italic */
@@ -110,7 +74,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-latin-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -120,7 +84,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-ext-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-latin-ext-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -130,7 +94,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/greek-ext-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-greek-ext-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+1F00-1FFF;
 }
 
@@ -140,7 +104,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/cyrillic-ext-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-cyrillic-ext-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0460-052F,U+1C80-1C8A,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F;
 }
 
@@ -150,7 +114,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/cyrillic-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-cyrillic-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116;
 }
 
@@ -160,7 +124,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/greek-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-greek-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0370-0377,U+037A-037F,U+0384-038A,U+038C,U+038E-03A1,U+03A3-03FF;
 }
 
@@ -170,7 +134,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/vietnamese-wght-italic.woff2) format('woff2-variations');
+  src: local('Inter Variable'), local('Inter'), url(@fontsource-variable/inter/files/inter-vietnamese-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+1EA0-1EF9,U+20AB;
 }
 
@@ -180,7 +144,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/latin-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-latin-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
@@ -190,7 +154,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/greek-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-greek-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0370-0377,U+037A-037F,U+0384-038A,U+038C,U+038E-03A1,U+03A3-03FF;
 }
 
@@ -200,7 +164,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/cyrillic-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-cyrillic-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116;
 }
 
@@ -210,7 +174,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/cyrillic-ext-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-cyrillic-ext-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0460-052F,U+1C80-1C8A,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F;
 }
 
@@ -220,7 +184,7 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/latin-ext-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-latin-ext-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -230,6 +194,6 @@
   font-style: italic;
   font-display: swap;
   font-weight: 200 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/source-serif-4:vf@latest/vietnamese-wght-italic.woff2) format('woff2-variations');
+  src: local('Source Serif 4'), url(@fontsource-variable/source-serif-4/files/source-serif-4-vietnamese-wght-italic.woff2) format('woff2-variations');
   unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+1EA0-1EF9,U+20AB;
 }
