fix: revert font policies
- use Google Font CDN and 中文网字计划 CDN
- try to preload KaTeX

--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -37,7 +37,8 @@ const {
 <LayoutDefault title={meta.title} description={excerpt}>
   <Fragment slot="head">
     <link
-      rel="stylesheet"
+      rel="preload"
+      as="stylesheet"
       href="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"
       crossorigin="anonymous"
     />
