--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,15 +75,16 @@ body.cloak {
 
 :root {
   --font-default-sans: "Inter", "Noto Color Emoji";
-  --font-default-sans-cjk: "Noto Sans CJK SC", "PingFang SC", "Microsoft YaHei";
+  --font-default-sans-cjk: "Noto Sans SC", "PingFang SC", "Microsoft YaHei";
 
   --font-default-serif: "Source Serif 4", "Noto Color Emoji";
-  --font-default-serif-cjk: "Noto Serif CJK SC", "PingFang SC", "Microsoft YaHei";
+  --font-default-serif-cjk: "Noto Serif SC", "PingFang SC", "Microsoft YaHei";
 
   --font-default-mono: "JetBrains Mono", "Noto Color Emoji";
   --font-default-mono-cjk: var(--font-default-serif-cjk);
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-optical-sizing: auto;
 
   --font-sans: var(--font-custom-sans, var(--font-default-sans)), var(--font-custom-sans-cjk, var(--font-default-sans-cjk)), sans-serif;
   --font-serif: var(--font-custom-serif, var(--font-default-serif)), var(--font-custom-serif-cjk, var(--font-default-serif-cjk)), serif;
