--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -81,7 +81,7 @@ body.cloak {
   --font-default-serif-cjk: "Noto Serif SC", "PingFang SC", "Microsoft YaHei";
 
   --font-default-mono: "JetBrains Mono", "Noto Color Emoji";
-  --font-default-mono-cjk: var(--font-default-serif-cjk);
+  --font-default-mono-cjk: var(--font-default-sans-cjk);
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-optical-sizing: auto;
