fix: stylesheet for katex

--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -38,7 +38,7 @@ const {
   <Fragment slot="head">
     <link
       rel="preload"
-      as="stylesheet"
+      as="style"
       href="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"
       crossorigin="anonymous"
     />
