--- a/src/pages/lab/index.astro
+++ b/src/pages/lab/index.astro
@@ -14,6 +14,12 @@ const labItems = [
     url: "academia",
     description: "Special curation of academic notes and thoughts",
   },
+  {
+    title: "Geographics",
+    icon: "i-mdi-map",
+    url: "lab/geographics",
+    description: "Geographic visualization components",
+  }
 ]
 ---
 
